--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,7 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": ["next/core-web-vitals", "prettier"],
+  "overrides": [{
+    "files": ["*.ts", "*.tsx"],
+    "parser": "@typescript-eslint/parser"
+  }]
 }
